add página de gerenciarPedidos

--- a/core/templates/index.html
+++ b/core/templates/index.html
@@ -266,7 +266,7 @@
 
         <div class="section-title">
           <h2>Fazer <span>Pedido</span></h2>
-          <p>Preencha bem os campos e detalhe bem o seu pedido</p>
+          <p>Preencha os campos e detalhe bem o seu pedido</p>
         </div>
 
         <!-- Aqui vai ser o formulário para registrar um pedido. --> 
