--- a/core/templates/index.html
+++ b/core/templates/index.html
@@ -277,29 +277,35 @@
               <div class="validate"></div>
             </div>
             <div class="col-lg-4 col-md-6 form-group mt-3 mt-md-0">
-              <input type="email" class="form-control" name="email" id="email" placeholder="E-mail" data-rule="email" data-msg="Please enter a valid email">
+              <input type="email" class="form-control" name="endereco" id="endereco" placeholder="Endereço" data-rule="endereco" data-msg="Please enter a valid email">
               <div class="validate"></div>
             </div>
             <div class="col-lg-4 col-md-6 form-group mt-3 mt-md-0">
               <input type="text" class="form-control" name="phone" id="phone" placeholder="Telefone" data-rule="minlen:4" data-msg="Please enter at least 4 chars">
               <div class="validate"></div>
             </div>
-            
           </div>
-          <div class="form-group mt-3">
-            <textarea class="form-control" name="message" rows="5" placeholder="Escreva aqui o seu pedido:"></textarea>
-            <div class="validate"></div>
-          </div>
-          <div class="mb-3">
-            <div class="loading">Loading</div>
-            <div class="error-message"></div>
-            <div class="sent-message">Your booking request was sent. We will call back or send an Email to confirm your reservation. Thank you!</div>
-          </div>
+          <br> 
+          <select class="form-control" >
+            <option value="" selected disabled hidden>Escolha um sabor para o seu pastel</option>
+            {% for sabor in saborPastel %}
+              <option>{{sabor}}</option>
+            {% endfor %}
+          </select>
+          <br>
+          <select class="form-control" >
+            <option value="" selected disabled hidden>Escolha uma bebida</option>
+            {% for listaBebidas in bebida %}
+              <option>{{listaBebidas}}</option>
+            {% endfor %}
+          </select>
+          <br>
           <div class="text-center"><button type="submit">Fazer Pedido</button></div>
         </form>
-
-      </div>
     </section><!-- End Book A Table Section -->
+
+
+
 
     <!-- ======= Gallery Section ======= -->
   <!-- End Gallery Section -->
@@ -340,7 +346,7 @@
       <div class="copyright">
         &copy; Copyright <strong><span>Delicious</span></strong>. All Rights Reserved
       </div>
-      <div class="credits">
+      <dvi class="credits">
         <!-- All the links in the footer should remain intact. -->
         <!-- You can delete the links only if you purchased the pro version. -->
         <!-- Licensing information: https://bootstrapmade.com/license/ -->
