--- a/core/templates/index.html
+++ b/core/templates/index.html
@@ -286,19 +286,48 @@
             </div>
           </div>
           <br> 
-          <select class="form-control" >
-            <option value="" selected disabled hidden>Escolha um sabor para o seu pastel</option>
-            {% for sabor in Sabor %}
-              <option>{{sabor}}</option>
-            {% endfor %}
-          </select>
+        
+          <div class="row">
+            <div class="col-lg col-md-6 form-group">
+              <select class="form-control" >
+                <option value="" selected disabled hidden>Escolha um sabor para o seu pastel</option>
+                {% for listaSabor in sabor %}
+                  <option>{{sabor}}</option>
+                {% endfor %}
+              </select>
+            </div>
+            <div class="col-lg-4 col-md-6 form-group">
+              <select class="form-control" >
+                <option value="" selected disabled hidden>Tamanho</option>
+                {% for listaTamanhos in tamanho %}
+                  <option>{{listaTamanho}}</option>
+                {% endfor %}
+              </select>
+            </div>
+            <div class="col-lg-2 col-md-6 form-group mt-3 mt-md-0">
+              <input type="number" max="10" class="form-control" name="quantidade" id="quantidade" placeholder="quantidade" data-rule="minlen:4" data-msg="Please enter at least 4 chars">
+              <div class="validate"></div>
+            </div>
+          </div>
+
           <br>
-          <select class="form-control" >
-            <option value="" selected disabled hidden>Escolha uma bebida</option>
-            {% for listaBebidas in Bebida %}
-              <option>{{listaBebidas}}</option>
-            {% endfor %}
-          </select>
+
+          <div class="row">
+            <div class="col-lg col-md-6 form-group">
+              <select class="form-control" >
+                <option value="" selected disabled hidden>Escolha uma bebida</option>
+                {% for listaBebidas in bebida %}
+                  <option>{{listaBebidas}}</option>
+                {% endfor %}
+              </select>
+            </div>
+            <div class="col-lg-4 col-md-6 form-group mt-3 mt-md-0">
+              <input type="number" max="10" class="form-control" name="quantidade" id="quantidade" placeholder="quantidade" data-rule="minlen:4" data-msg="Please enter at least 4 chars">
+              <div class="validate"></div>
+            </div>
+          </div>
+          
+          
           <br>
           <div class="text-center"><button type="submit">Fazer Pedido</button></div>
         </form>
