--- a/core/templates/index.html
+++ b/core/templates/index.html
@@ -305,7 +305,7 @@
               </select>
             </div>
             <div class="col-lg-2 col-md-6 form-group mt-3 mt-md-0">
-              <input type="number" max="10" min="0" step="1" oninput="(validity.valid)||(value='');" class="form-control" name="quantidade" id="quantidade" placeholder="nº de bebidas" data-rule="minlen:4" data-msg="Please enter at least 1 chars">
+              <input type="number" max="10" min="0" step="1" oninput="(validity.valid)||(value='');" class="form-control" name="quantidade" id="quantidade" placeholder="nº de pastéis" data-rule="minlen:4" data-msg="Please enter at least 1 chars">
               <div class="validate"></div>
             </div>
           </div>
