criação da tabela de gerenciamento

--- a/core/templates/gerenciarPedidos.html
+++ b/core/templates/gerenciarPedidos.html
@@ -5,8 +5,79 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <style>
+    table {
+      font-family: arial, sans-serif;
+      border-collapse: collapse;
+      width: 100%;
+    }
+    
+    td, th {
+      border: 1px solid #dddddd;
+      text-align: left;
+      padding: 8px;
+    }
+    
+    tr:nth-child(even) {
+      background-color: #dddddd;
+    }
+    </style>
 </head>
 <body>
   <h1> Este é um teste de redirecionamento para a tela que vai gerenciar os pedidos. </h1>
+
+  <table>
+    <tr>
+      <th> Pedido </th>
+      <th> Sabor do Pastel </th>
+      <th> Tamanho </th>
+      <th> Quantia de Pasteís </th>
+      <th> Bebida </th>
+      <th> Quantia de Bebidas </th>
+      <th> Excluir </th>
+      <th> Editar </th>
+    </tr>
+
+
+    <tr> 
+      <td> 123 </td>
+      <td> Queijo </td>
+      <td> Gigante </td>
+      <td> 5 </td>
+      <td> Coca </td>
+      <td> 5 </td>
+      <td> <a href="#">Excluir</a> </td>
+      <td> <a href="#">Editar</a> </td>
+    </tr>
+
+
+    <tr> 
+      <td> 123 </td>
+      <td> Queijo </td>
+      <td> Gigante </td>
+      <td> 5 </td>
+      <td> Coca </td>
+      <td> 5 </td>
+      <td> <a href="#">Excluir</a> </td>
+      <td> <a href="#">Editar</a> </td>
+    </tr>
+
+
+    <tr> 
+      <td> 123 </td>
+      <td> Queijo </td>
+      <td> Gigante </td>
+      <td> 5 </td>
+      <td> Coca </td>
+      <td> 5 </td>
+      <td> <a href="#">Excluir</a> </td>
+      <td> <a href="#">Editar</a> </td>
+    </tr>
+
+
+  </table>
+
+
+
 </body>
 </html>
