--- a/core/templates/editarBebida.html
+++ b/core/templates/editarBebida.html
@@ -7,7 +7,7 @@
   <title>Editar Pastel</title>
 </head>
 <body>
-  <form class="formulario" method="POST" action="?">
+  <form method="POST" action="?">
     {% csrf_token %}
     {{ formBebida }}
     <br>
