--- a/core/templates/editarPastel.html
+++ b/core/templates/editarPastel.html
@@ -7,10 +7,9 @@
   <title>Editar Pastel</title>
 </head>
 <body>
-  <form class="formulario" method="POST" action="?">
+  <form method="POST" action="?"> 
     {% csrf_token %}
     {{ formPastel }}
-
     <br>
     <input id="enviar" type="submit" value="ENVIAR">
 
