--- a/core/templates/index.html
+++ b/core/templates/index.html
@@ -158,7 +158,7 @@
       <div class="container">
 
         <div class="section-title">
-          <h2><span>Pasteís</span></h2>
+          <h2><span>Pastéis</span></h2>
         </div>
         <div class="row menu-container">
 
@@ -190,6 +190,9 @@
           <div class="col-lg-6 menu-item filter-starters">
             <div class="menu-content">
               <a href="#">{{listaBebida.nomeBebida}}</a><span>${{listaBebida.preco}}</span>
+            </div>
+            <div class="menu-ingredients">
+              {{listaBebida.descricao}}
             </div>
           </div>
 
