--- a/core/templates/gerenciarBebidas.html
+++ b/core/templates/gerenciarBebidas.html
@@ -22,6 +22,7 @@
     <tr>
       <th> Nome da Bebida </th>
       <th> Preço </th>
+      <th> Descrição </th>
       <th> Opções </th>
     </tr>
 
@@ -29,14 +30,17 @@
     <tr> 
       <td>{{bebida.nomeBebida}} </td>
       <td>{{bebida.preco}} </td>
+      <td>{{bebida.descricao}} </td>
       <td> <a href="{%url 'editarBebida' bebida.id%}">Editar</a> <a href="{%url 'deletarBebida' bebida.id%}">Excluir</a> </td>
     </tr> 
     {%endfor%}
   </table>
 
-  <form method="POST"> 
+  <form method="POST" class="form-inline"> 
     {% csrf_token %}
     {{formBebida}}
+    <br> 
+    <br> 
     <button type="submit" class="btn btn-dark">Cadastrar Bebida</button>
   </form>
 
